--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -15,11 +15,6 @@
     width:100%;
 }
 
-.homepage-fix {
-    position: relative;
-    padding: 0;
-}
-
 .mdl-data-table.mdl-js-data-tabled.youth-tracker-container {
     display: table;
     position: relative;
