--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -19,3 +19,8 @@ a.mdl-navigation__link.active {
 body {
     background-color: $light-green;
 }
+
+.header-fix {
+    position: relative;
+    padding: 0;
+}
